OverLapping CSS on Playzone issue fixed

--- a/src/app/pages/rewards/rewards.component.scss
+++ b/src/app/pages/rewards/rewards.component.scss
@@ -224,21 +224,19 @@ hr {
 }
 
 // Redemption History
-.form-select{
-    width: 10%;
-    float: right;
-    margin: 10px;
+.form-select-sm{
+     width: 10%;
+    //  float: right;
+     margin: 10px;
     font-size: 12px;
     color: #000000;
-    background-color: #F2F2F2;
-    border: none;
-    height: 46px;
-    position: absolute;
-    right: 0;
+     background-color: #F2F2F2;
+     border: none;
+     height: 46px;
+     position: absolute;
+     right: 0;
     z-index: 10;
-}
-
-
+ }
 
 .redemption_card{
   
@@ -390,8 +388,6 @@ margin-right: 150px;
 color: #A5ACB8;
 
 }
-
-
 .cost_redemption{
     text-align: center;
     font-family: 'Inter';
@@ -503,13 +499,15 @@ color: #A5ACB8;
     top: 0;
     z-index: 1;
 }
-.table th {
-    font-weight: 600;
-    background-color:var(--myvar);
-    color: #FFFFFF;
-    font-size: 14px;
+.table-container{
+    .table th{
+        font-weight: 600;
+        background-color:var(--myvar);
+        color: #FFFFFF;
+        font-size: 14px;
+   }
 }
-
+ 
 #example{
     margin-top: 15px;
 }
@@ -650,7 +648,6 @@ color: #A5ACB8;
 .expiry_date_popup{
 position: relative;
 }
-
 .expiry_date_popup p{
     font-family: 'Inter';
     font-style: normal;
